--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Articles#index</h1>
-<p>A breaking news item</p>
-<p>Some really breaking action</p>
+<% @articles.each do |article| %>
+    <p><%= article.title %></p>
+    <p><%= article.content %></p>
+  <% end %>
