added link to deployed app in README.md

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,4 +2,9 @@
 <% @articles.each do |article| %>
     <p><%= article.title %></p>
     <p><%= article.content %></p>
+    <% end %>
+    # <%= link_to new_article do %>
+    # <p><% "New Article" %></p>
   <% end %>
+
+  
