--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,18 @@
-<h1>Articles#index</h1>
-<% @articles.each do |article| %>
-    <p><%= article.title %></p>
-    <p><%= article.content %></p>
-    <% end %>
-    # <%= link_to new_article do %>
-    # <p><% "New Article" %></p>
-  <% end %>
+<h1>User#index</h1>
+<p>Log in or Sign up to view articles</p>
+<% @user %>
+<%= Log in link %>
+ <%= Sign up link %>
+<% end %>
+
+
+# # <h1>Articles#index</h1>
+# <% @articles.each do |article| %>
+#     <p><%= article.title %></p>
+#     <p><%= article.content %></p>
+#     <% end %>
+#     # <%= link_to new_article do %>
+#     # <p><% "New Article" %></p>
+#   <% end %>
 
   
