--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,2 +1,6 @@
 <h1>User#index</h1>
 <p>Find me in app/views/user/index.html.erb</p>
+
+#log in link
+<li><%= link_to 'Sign up', new_user_registration_path %></li>
+
