--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,6 +1,16 @@
 <h1>User#index</h1>
-<p>Find me in app/views/user/index.html.erb</p>
 
-#log in link
-<li><%= link_to 'Sign up', new_user_registration_path %></li>
+    <% if user_signed_in? %>
+        <li><% link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+            <h1>Articles</h1>
+            <% @articles.each do |article| %>
+                <p><%= article.title %></p>
+                <p><%= article.content %></p>
+            <% end %>
+        
+
+    <% else %>
+        <li><%= link_to 'Log In', new_user_session_path %></li>
+        <li><%= link_to 'Sign up', new_user_registration_path %></li>
+    <% end %>
 
