creates new Users controller, changes root path, a got error regarding validation of email, adds ignoring case sensitivity, goes green

--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,10 +1,9 @@
-<h1>User#index</h1>
+# <h1>User#index</h1>
 
-    <% if user_signed_in? %>
-        <li><% link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+#     <% if user_signed_in? %>
+#         <% link_to 'Log out', destroy_user_session_path, method: :delete %>
 
-    <% else %>
-        <li><%= link_to 'Log in', new_user_session_path %></li>
-        <li><%= link_to 'Sign up', new_user_registration_path %></li>
-    <% end %>
-
+#     <% else %>
+#         <%= link_to 'Login', new_user_session_path %>
+#         <%= link_to 'Sign up', new_user_registration_path %>
+#     <% end %>
