--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
-    <%= yield %>
+      <header>
+        <% render 'layouts/navigation' %>
+      </header>
+   <%= yield %>
+   
   </body>
 </html>
