--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,11 @@
 <h1>Articles</h1>
+
+<h2> This is an article </h2>
+<p> this is some text about it </p>
+
+<h2> This is another article </h2>
+<p> this is some text about it </p>
+
 <% @articles.each do |article| %>
     <p><%= article.title %></p>
     <p><%= article.content %></p>
