--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,20 @@
   </head>
 
   <body>
-  <nav>
-  <div>
-    <ul>
-      <% if user_signed_in? %>
-        <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
-
-
-      <% else %>
-        <li class="active"><%= link_to 'Login', new_user_session_path %></li>
-        <li><%= link_to 'Signup', new_user_registration_path %></li>
-      <% end %>
-    </ul>
-  </div>
-</nav>
-   <%= yield %>
-   
+    <nav>
+    <header>
+      <div>
+        <ul>
+          <% if user_signed_in? %>
+            <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li class="active"><%= link_to 'Login', new_user_session_path %></li>
+            <li><%= link_to 'Signup', new_user_registration_path %></li>
+        <% end %>
+      </ul>
+   </div>
+   </header>
+  </nav>
+    <%= yield %>
   </body>
 </html>
