--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Articles</h1>
 
+<%= link_to 'New Article', new_article_path %>
+
 <h2> This is an article </h2>
 <p> this is some text about it </p>
 
