--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,17 +1,19 @@
 <h1>New Article</h1>
 
-<%= form_for :article, url: articles_path do |f| %>
+<%= form_with scope: :article, url: articles_path, local: true do |form| %>
     <p>
-        <%= f.label :title %><br>
-        <%= f.text_field :title %>
+        <%= form.label :title %><br>
+        <%= form.text_field :title %>
     </p>
 
     <p>
-        <%= f.label :text %><br>
-        <%= f.text_area :text %>
+        <%= form.label :text %><br>
+        <%= form.text_area :text %>
     </p>
 
     <p>
-        <%= f.submit %>
+        <%= form.submit %>
     </p>
 <% end %>
+
+<%= link_to 'Back', articles_path %>
